Adds styles for positioning of all images.

--- a/index.html
+++ b/index.html
@@ -37,16 +37,12 @@
             </div>
         </section>
 
-        <!-- Section 4: Products - Bath Fizzes & Shower Steamers -->
-        <section class="content-section">
+         <!-- Section 4 & 5: Products Side-by-Side -->
+        <section class="content-section products-row">
             <div class="image-container">
                 <img src="images/bathfizzes.png" alt="Products - Bath Fizzes and Shower Steamers">
                 <figcaption>4. Products - Joy Gems Bath Fizzes & Shower Steamers</figcaption>
             </div>
-        </section>
-
-        <!-- Section 5: Products - Body Wash & Essential Oils -->
-        <section class="content-section">
             <div class="image-container">
                 <img src="images/bodywash.png" alt="Products - Body Wash and Essential Oil Collection">
                 <figcaption>5. Products - Natural Body Wash & Essential Oil Collection</figcaption>
